--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -337,7 +337,7 @@
       <li>Chace, Calum:
         <a href="https://fivebooks.com/best-books/artificial-intelligence/">The best books on Artificial Intelligence</a>,
         <i class="website">Five Books</i> (no date). Calum Chace is the author of
-        <a href="https://calumchace.wordpress.com/surviving-ai-synopsis/"><i class="booktitle">Surviving <abbr>AI</abbr></i>
+        <a href="https://calumchace.wordpress.com/surviving-ai-synopsis/"><i class="booktitle">Surviving <abbr>AI</abbr></i></a>
         and recommends the following books:
         <ul>
           <li><i class="booktitle">The Singularity is Near: When Humans Transcend Biology</i> (2005) by Ray Kurzweil.,</li>
@@ -443,7 +443,7 @@
       </li>
       <li>Hiner, Jason:
         <a href="http://www.zdnet.com/article/ai-and-jobs-where-humans-are-better-than-algorithms-and-vise-versa/"><abbr>AI</abbr> and jobs: Where humans are better than algorithms, and vice versa</a>,
-        <i class="website"><abbr>ZD</abbr>Net, 03.12.2017.
+        <i class="website"><abbr>ZD</abbr>Net</i>, 03.12.2017.
       </li>
       <li>Knight, Will:
         <a href="https://www.technologyreview.com/s/609610/the-us-leads-in-artificial-intelligence-but-for-how-long/">The U.S. Leads in Artificial Intelligence, but for How Long?</a>,
