Adamson's recommenddations for islamic philosophy: quote

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1547,7 +1547,9 @@
       </li>
       <li>Adamson, Peter:
         <a href="https://fivebooks.com/best-books/peter-adamson-philosophy-islamic-world/">The Best Books on Philosophy in the Islamic World</a>,
-        <i class="website">Five Books</i>, March 2018. Adamson recommends the following books:
+        <i class="website">Five Books</i>, March 2018. Quote:
+        <q cite="https://twitter.com/five_books/status/1003284941675859970">There were several generations in the Latin world where they were reading Avicenna and thinking about Avicenna more than they were thinking about Aristotle.</q>
+        Adamson recommends the following books:
         <i class="booktitle">Greek Thought, Arabic Culture: the Graeco-Arabic Translation Movement in Baghdad and Early Society</i> by Dimitri Gutas 
         (<a href="https://www.routledge.com/Greek-Thought-Arabic-Culture-The-Graeco-Arabic-Translation-Movement-in/Gutas/p/book/9780415061339">Routledge, 1998</a>), 
         <i class="booktitle">Avicenna</i> (2010) by Jon McGinnis, 
