Maudlin: The Defeat of Reason

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -826,6 +826,22 @@
         <i class="website">Five Books</i>, March 2015.
         <!--@@list books-->
       </li>
+      <li>Maudlin, Tim:
+        <a href="http://bostonreview.net/science-nature-philosophy-religion/tim-maudlin-defeat-reason">The Defeat of Reason</a>,
+        <i class="website">Boston Review</i>, 01.06.2018. A detailed review of two books:
+        <i class="booktitle">What Is Real?: The Unfinished Quest for the Meaning of Quantum Physics</i> by Adam Becker (Basic Books)
+        and
+        <i class="booktitle">The Ashtray: (Or the Man Who Denied Reality)</i> by
+        <a href="https://en.wikipedia.org/wiki/Errol_Morris">Errol Morris</a>
+        (University of Chicago Press).
+        The first book is about how the
+        <a href="https://en.wikipedia.org/wiki/Copenhagen_interpretation">Copenhagen interpretation of quantum mechanics</a>
+        became and remained dominant through non-scientific means; the second book is about Thomas Kuhn.
+        <br />Quotes:
+        <q>Logical positivism has been killed many times over by philosophers. But no matter how many stakes are driven through its heart, it arises unbidden in the minds of scientists.</q>
+        <br />About Kuhn:
+        <q>In the 1960s, it was chic to depict science as no more legitimate or authoritative than any other cultural practice. Instead, it is all a matter of propaganda and power moves.</q>
+      </li>
       <!--li>Shermer, Michael: 
         <a href="@@"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
         <i class="journal">Scientific American</i>, vol. 312, no. 6 (June 2015).
