Anadale: A Defense of Machiavelli

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1318,6 +1318,11 @@
         <a href="https://www.youtube.com/watch?v=tJNfOeJcC_E">How does Machiavelli Regard Religion?</a>
         (YouTube, 128 minutes, 19.12.2013): video of a panel at the Program on Constitutional Government at Harvard University.
       </li>
+      <li>Anadale, Christopher:
+        <a href="https://www.youtube.com/watch?v=admjd_b6ftY">A Defense of Machiavelli</a>
+        (YouTube, 11 minutes, 10.08.2017): video with an introduction to and an excerpt from
+        Maurizio Viroli's book <i class="booktitle">Niccolò's Smile</i>.
+      </li>
       <li>Viroli, Maurizio:
         <i class="booktitle">How to Read Machiavelli</i>. Granta / Allen &amp; Unwin, 2008. (128 pages)
         <a href="https://www.allenandunwin.com/browse/books/academic-professional/philosophy/How-To-Read-Machiavelli-Maurizio-Viroli-9781862079915"><abbr>ISBN</abbr> 9781862079915</a>.
