--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1323,6 +1323,13 @@
         (YouTube, 11 minutes, 10.08.2017): video with an introduction to and an excerpt from
         Maurizio Viroli's book <i class="booktitle">Niccolò's Smile</i>.
       </li>
+      <li>MacDonald, Don:
+        <a href="https://www.youtube.com/watch?v=664thVARTQo">Learning to Love Machiavelli</a>
+        (YouTube, 10 minutes, 17.07.2012): presentation at TEDxBoston 2012.
+        MacDonald puts the quote &ldquo;it is better to be feared than to be loved&rdquo; into its context.
+        and corrects a number of other misconceptions.
+        MacDonald wrote a <a href="http://donmacdonald.com/">graphic novel about Machiavelli</a>.
+      </li>
       <li>Viroli, Maurizio:
         <i class="booktitle">How to Read Machiavelli</i>. Granta / Allen &amp; Unwin, 2008. (128 pages)
         <a href="https://www.allenandunwin.com/browse/books/academic-professional/philosophy/How-To-Read-Machiavelli-Maurizio-Viroli-9781862079915"><abbr>ISBN</abbr> 9781862079915</a>.
