Travers: The Machiavellian's Guide to Empathy

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1330,6 +1330,10 @@
         and corrects a number of other misconceptions.
         MacDonald wrote a <a href="http://donmacdonald.com/">graphic novel about Machiavelli</a>.
       </li>
+      <li>Travers, Cheryl:
+        <a href="https://www.youtube.com/watch?v=q52A0aCFcq0">The Machiavellian's Guide to Empathy</a>
+        (YouTube, 20 minutes, 26.06.2013): presentation at TEDxLoughborough in March 2013.
+      </li>
       <li>Viroli, Maurizio:
         <i class="booktitle">How to Read Machiavelli</i>. Granta / Allen &amp; Unwin, 2008. (128 pages)
         <a href="https://www.allenandunwin.com/browse/books/academic-professional/philosophy/How-To-Read-Machiavelli-Maurizio-Viroli-9781862079915"><abbr>ISBN</abbr> 9781862079915</a>.
