The Living Handbook of Narratology

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -397,6 +397,12 @@
         including an
         <a href="http://www.kristisiegel.com/theory.htm">Introduction to Modern Literary Theory</a>.
       </li>
+      <li>
+        <a href="http://www.lhn.uni-hamburg.de/">The Living Handbook of Narratology</a>:
+        a wiki-based version of the
+        <a href="https://www.degruyter.com/view/product/21358"><i class="booktitle">Handbook of Narratology</i></a>
+        edited by Peter Hühn, John Pier, Wolf Schmid and Jörg Schönert (De Gruyter, 2009).
+      </li>
       <li>Chandler, Daniel: 
         <a href="http://visual-memory.co.uk/daniel/Documents/S4B/semiotic.html">Semiotics for Beginners</a>.
         <!-- https://duckduckgo.com/?q=chandler+%22semiotics+for+beginners%22&ia=web -->
