Peterson: Maps of Meaning

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -366,6 +366,18 @@
         Wiley-<abbr>VCH</abbr> Verlag, 2017.
         <a href="http://www.wiley-vch.de/de/fachgebiete/finanzen-wirtschaft-recht/wirtschaft-und-management-13ba/wirtschaft-u-gesellschaft-13ba7/ihr-wegweiser-zu-rationalen-analysen-und-entscheidungen-978-3-89578-466-8"><abbr>ISBN</abbr> 978-3-89578-466-8</a>.
       </li>
+      <li>Peterson, Jordan:
+        <a href="https://en.wikipedia.org/wiki/Maps_of_Meaning:_The_Architecture_of_Belief"><i class="booktitle">Maps of Meaning: The Architecture of Belief</i></a>
+        (Wikipedia article about 1999 book). See also the series of lectures
+        <a href="https://www.youtube.com/playlist?list=PL22J3VaeABQAT-0aSPq-OKOpQlHyR4k5h">Maps of Meaning (2017)</a>
+        on YouTube and
+        <a href="https://jordanbpeterson.com/">Jordan B. Peterson's website</a>.
+      </li>
+      <!--
+        * Massimo Pigliucci: "Nope, Jordan Peterson ain’t no Stoic", 29.05.2018: https://howtobeastoic.wordpress.com/2018/05/29/nope-jordan-peterson-aint-no-stoic/
+        * Alexander Offord: "The Intellectual Fraudulence of Jordan Peterson (apropos of Daniel Karasik)", 14.11.2016: http://alexanderofford.com/the-intellectual-fraudulence-of-jordan-peterson-apropos-of-daniel-karasik/
+        * Peggy Noona: "Who’s Afraid of Jordan Peterson?", Wall Street Journal, 25.01.2018: https://www.wsj.com/articles/whos-afraid-of-jordan-peterson-1516925574
+      -->
     </ul>
   </main>
 
