Jordan Peterson's book recommendations

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -373,6 +373,33 @@
         on YouTube and
         <a href="https://jordanbpeterson.com/">Jordan B. Peterson's website</a>.
       </li>
+      <li>Brooks, Jon:
+        <a href="http://highexistence.com/15-terrifying-books-jordan-peterson-urges-smart-people-read/">15 Terrifying Books Jordan Peterson Urges All Smart People to Read</a>,
+        <i class="booktitle">High Existence</i>, 01.03.2018.
+        Peterson's recommendations (apparently) are the following:
+        <ol>
+          <li><i class="booktitle">Brave New World</i> Aldous Huxley by (1932),</li>
+          <li><i class="booktitle">1984</i> by George Orwell (1949),</li>
+          <li><i class="booktitle">The Road To Wigan Pier</i> by George Orwell (1937),</li>
+          <li><i class="booktitle">Crime And Punishment</i> by Fyodor Dostoevsky (1866),</li>
+          <li><i class="booktitle">Demons</i> by Fyodor Dostoevsky (1871–2),</li>
+          <li><i class="booktitle">Beyond Good And Evil</i> by Friedrich Nietzsche (1886),</li>
+          <li><i class="booktitle">Ordinary Men: Reserve Police Battalion 101 and the Final Solution in Poland</i> by Christopher Browning (1992),</li>
+          <li><i class="booktitle">The Painted Bird</i> by Jerzy Kosinski (1965;
+            Peterson once said this was the <a href="https://www.quora.com/What-is-the-most-shocking-book-you-have-ever-read/answer/Jordan-B-Peterson">most shocking book he had ever read</a>),</li>
+          <li><i class="booktitle">The Rape of Nanking: The Forgotten Holocaust of World War II</i> by Iris Chang (1997),</li>
+          <li><i class="booktitle">The Gulag Archipelago</i> by Aleksandr Solzhenitsyn (three volumes, 1973),</li>
+          <li><i class="booktitle">Man’s Search for Meaning</i> by Viktor Frankl (1946),</li>
+          <li><i class="booktitle">Modern Man in Search of A Soul</i> by Carl Jung,</li>
+          <li><i class="booktitle">Maps Of Meaning: The Architecture of Belief</i> by Jordan B. Peterson (1999),</li>
+          <!--Lecture: https://www.youtube.com/watch?v=I8Xc2_FtpHI&list=PL22J3VaeABQAT-0aSPq-OKOpQlHyR4k5h -->
+          <li><i class="booktitle">A History of Religious Ideas</i> by Mircea Eliade (three volumes, 1978, 1982, 1985),</li>
+          <li><i class="booktitle">Affective Neuroscience: The Foundations of Human and Animal Emotions</i> by Jaak Panksepp (1988).</li>
+        </ol>
+        Another recommendation, not mentioned in the list, is
+        <a href="https://en.wikipedia.org/wiki/The_Myth_of_Mental_Illness"><i class="booktitle">The Myth of Mental Illness: Foundations of a Theory of Personal Conduct</i></a>
+        (1961) by Thomas Szasz.
+      </li>
       <!--
         * Massimo Pigliucci: "Nope, Jordan Peterson ain’t no Stoic", 29.05.2018: https://howtobeastoic.wordpress.com/2018/05/29/nope-jordan-peterson-aint-no-stoic/
         * Alexander Offord: "The Intellectual Fraudulence of Jordan Peterson (apropos of Daniel Karasik)", 14.11.2016: http://alexanderofford.com/the-intellectual-fraudulence-of-jordan-peterson-apropos-of-daniel-karasik/
