--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1334,6 +1334,13 @@
         <a href="https://www.youtube.com/watch?v=q52A0aCFcq0">The Machiavellian's Guide to Empathy</a>
         (YouTube, 20 minutes, 26.06.2013): presentation at TEDxLoughborough in March 2013.
       </li>
+      <li>Kohut, Matt:
+        <a href="https://www.youtube.com/watch?v=5quQd4EjQwc">Machiavelli's Dilemma</a>
+        (YouTube, 12 minutes, 07.01.2016): presentation at TEDxBeaconStreet.
+        Kohut is co-author of <i class="booktitle">Compelling People: The Hidden Qualities that Make Us Influential</i>.
+        <!--https://www.littlebrown.co.uk/books/detail.page?isbn=9780349403076 - not aout Machiavelli-->
+        <!--see review at http://jackmalcolm.com/2013/12/compelling-people-the-hidden-qualities-that-make-us-influential/ -->
+      </li>
       <li>Viroli, Maurizio:
         <i class="booktitle">How to Read Machiavelli</i>. Granta / Allen &amp; Unwin, 2008. (128 pages)
         <a href="https://www.allenandunwin.com/browse/books/academic-professional/philosophy/How-To-Read-Machiavelli-Maurizio-Viroli-9781862079915"><abbr>ISBN</abbr> 9781862079915</a>.
