Nethersole: Art and Violence in Early Renaissance Florence (2018)

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1427,7 +1427,7 @@
         <a href="https://www.youtube.com/watch?v=xDkxk0cmB8E">Machiavel - Conférence de Patrick Boucheron (1/2)</a></span>
         (YouTube, 48 minutes, 02.10.2017). Recorded on 18 September 2017 in the Balbuzard Café.
       </li>
-       <!--Philip Bobbitt: The Garments of Court and Palace. Atlantic Books, 2015. ISBN 9781843546894: https://atlantic-books.co.uk/book/the-garments-of-court-and-palace/ -->
+       <!--Philip Bobbitt: The Garments of Court and Palace. Atlantic Books, 2015. ISBN 9781843546894: https://atlantic-books.co.uk/book/the-garments-of-court-and-palace/-->
       <li>Strozzi, Alessandra Macinghi:
         <i class="booktitle">Selected Letters of Alessandra Strozzi. Bilingual Edition</i>. Translated with an introduction and notes by Heather Gregory. University of California Press, 1997.
         <abbr>ISBN</abbr> 978-0-520-20390-7.
@@ -1518,6 +1518,10 @@
       <li>Davies, Jonathan:
         <i class="booktitle">Aspects of Violence in Renaissance Europe</i>. Routledge, 2013. (276 pages)
         <a href="https://www.routledge.com/Aspects-of-Violence-in-Renaissance-Europe/Davies/p/book/9781409433415"><abbr>ISBN</abbr> 9781409433415</a>.<!--$$$-->
+      </li>
+      <li>Nethersole, Scott:
+        <i class="booktitle">Art and Violence in Early Renaissance Florence</i>. Yale University Press, June 2018. (320 pages)
+        <a href="https://yalepress.yale.edu/book/9780300233513/art-and-violence-early-renaissance-florence"><abbr>ISBN</abbr> 9780300233513</a>.
       </li>
       <li>
         <a href="http://fivebooks.com/interview/ken-bartlett-renaissance-books/">Kenneth Bartlett recommends the best Renaissance Books</a>, 
