Wikipedia: Italian Wars

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1523,6 +1523,7 @@
         <i class="booktitle">Art and Violence in Early Renaissance Florence</i>. Yale University Press, June 2018. (320 pages)
         <a href="https://yalepress.yale.edu/book/9780300233513/art-and-violence-early-renaissance-florence"><abbr>ISBN</abbr> 9780300233513</a>.
       </li>
+      <li><a href="https://en.wikipedia.org/wiki/Italian_Wars">Italian Wars</a> (Wikipedia).</li>
       <li>
         <a href="http://fivebooks.com/interview/ken-bartlett-renaissance-books/">Kenneth Bartlett recommends the best Renaissance Books</a>, 
         <i class="website">Five Books</i> (no date).
