Wikipedia: Calcio Fiorentino

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1524,6 +1524,13 @@
         <a href="https://yalepress.yale.edu/book/9780300233513/art-and-violence-early-renaissance-florence"><abbr>ISBN</abbr> 9780300233513</a>.
       </li>
       <li><a href="https://en.wikipedia.org/wiki/Italian_Wars">Italian Wars</a> (Wikipedia).</li>
+      <li><a href="https://en.wikipedia.org/wiki/Calcio_Fiorentino">Calcio Fiorentino</a> (Wikipedia).</li>
+      <!--
+      <li>:
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+      -->
       <li>
         <a href="http://fivebooks.com/interview/ken-bartlett-renaissance-books/">Kenneth Bartlett recommends the best Renaissance Books</a>, 
         <i class="website">Five Books</i> (no date).
