Carey: Google Duplex: We need to talk about the ethics

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -300,6 +300,15 @@
           <li><i class="booktitle">2001: A Space Odyssey</i> (1968) by Arthur C Clarke.</li>
         </ul>
       </li>
+      <li>Carey, Bridget:
+        <a href="https://www.youtube.com/watch?v=Y0otgRmscUk">Google Duplex: We need to talk about the ethics</a>
+        (CNet on YouTube, 6 minutes, 09.05.2018). Bridget Carey thinks Google took the <abbr>AI</abbr> too far
+        by not making Google Duplex to identify itself as a digital assistant to the people it calls.
+        This is a form of deception.
+        The video is part of the article
+        <a href="https://www.cnet.com/news/google-duplex-assistant-bot-deception-scary-ethics-question/">Human or bot? Google Duplex scares me</a>
+        on <i class="website">CNet</i> (11 May 2018).
+      </li>
       <li>Danaylov, Nikola (&ldquo;Socrates&rdquo;):
         <a href="https://www.singularityweblog.com/peter-singer/">Philosopher Peter Singer on <abbr>AI</abbr>, Transhumanism and Ethics</a>,
         <i class="website">Singularity Weblog</i>, 01.06.2018.
