--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1314,6 +1314,10 @@
         The talk is based on Viroli's book <i class="booktitle">Redeeming The Prince: The Meaning of Machiavelli's Masterpiece</i>.
         <!--Book published by Princeton UP, 2013: https://press.princeton.edu/titles/10083.html -->
       </li>
+      <li>Viroli, Maurizio:
+        <a href="https://www.youtube.com/watch?v=FhIv7gZsAFU">Lessons from Machiavelli &ndash; Leadership in Changing Times</a>
+        (YouTube, 63 minutes, 14.03.2017): talk at the McCombs Schools of Business on 22.02.2017.
+      </li>
       <li>
         <a href="https://www.youtube.com/watch?v=tJNfOeJcC_E">How does Machiavelli Regard Religion?</a>
         (YouTube, 128 minutes, 19.12.2013): video of a panel at the Program on Constitutional Government at Harvard University.
