--- a/humanities/index.html
+++ b/humanities/index.html
@@ -374,6 +374,11 @@
         <i class="website">John Lye's Course and Source Page</i>, 1996, 2003.
       </li>
       <li>
+        <a href="https://guides.slv.vic.gov.au/vceliterature/theory">Literary theory and interpretation - English &amp; literature guide for VCE (and everyone)</a>,
+        <i class="website">State Library of Victoria</i> (last updated in June 2018):
+        links to resources for an initial orientations in literary theory and criticism.
+      </li>
+      <li>
         <a href="http://litguide.press.jhu.edu/index.html">The Johns Hopkins Guide to Literary Theory and Criticism</a>
         is a reference work with entries on literary critics and theorists, critical schools and movements, etcetera.
         Access requires a
