The Voice of the Shuttle: Literary Theory

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -403,6 +403,10 @@
         <a href="http://www.kristisiegel.com/theory.htm">Introduction to Modern Literary Theory</a>.
       </li>
       <li>
+        <a href="http://vos.ucsb.edu/browse.asp?id=2718">Literary Theory</a>,
+        <i class="website">The Voice of the Shuttle</i> (no date): a link collection.
+      </li>
+      <li>
         <a href="http://www.lhn.uni-hamburg.de/">The Living Handbook of Narratology</a>:
         a wiki-based version of the
         <a href="https://www.degruyter.com/view/product/21358"><i class="booktitle">Handbook of Narratology</i></a>
