Farrell: The Varieties of Authorial Intention

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -455,6 +455,10 @@
         <i class="magazine">Quillette</i>, 15.04.2018.
         <!--@@-->
       </li>
+      <li>Farrell, John:
+        <i class="booktitle">The Varieties of Authorial Intention: Literary Theory Beyond the Intentional Fallacy</i>. Palgrave Macmillan, 2017. (xiii + 274 pages)
+        <a href="https://www.palgrave.com/us/book/9783319489766"><abbr>ISBN</abbr> 978-3-319-48976-6</a>.
+      </li>
       <li>Morrissey, Sinéad:
         <a href="https://fivebooks.com/best-books/sinead-morrissey-on-poetry/">The best books on Poetry</a>,
         <i class="website">Five Books</i> (no date; April 2018?). The poet recommends the following books:
