Lombardi: 10 Literary Theory and Criticism Titles

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -459,6 +459,26 @@
         <i class="booktitle">The Varieties of Authorial Intention: Literary Theory Beyond the Intentional Fallacy</i>. Palgrave Macmillan, 2017. (xiii + 274 pages)
         <a href="https://www.palgrave.com/us/book/9783319489766"><abbr>ISBN</abbr> 978-3-319-48976-6</a>.
       </li>
+      <li>Lombardi, Esther:
+        <a href="https://www.thoughtco.com/essential-literary-theory-and-criticism-books-740537">10 Literary Theory and Criticism Titles</a>,
+        <i class="website">ThoughtCo</i>, 25.04.2018. The titles are the following:
+        <ol>
+          <li><i class="booktitle">The Norton Anthology of Theory and Criticism</i> by ,</li>
+          <li><i class="booktitle">Literary Theory: An Anthology</i> edited by Julie Rivkin and Michael Ryan (third edition, Wiley, 2017),</li>
+          <!--https://www.wiley.com/en-us/Literary+Theory%3A+An+Anthology%2C+3rd+Edition-p-9781118707852-->
+          <li><i class="booktitle">A Handbook of Critical Approaches to Literature</i> edited by Wilfred L. Guerin and others (sixth edition, Oxford University Press, 2011),</li>
+          <!--http://www.oupcanada.com/catalog/9780195394726.html-->
+          <li><i class="booktitle">Beginning Theory</i> by Peter Barry (Manchester University Press, 2009),</li>
+          <!--http://www.manchesteruniversitypress.co.uk/9780719079276/-->
+          <li><i class="booktitle">Literary Theory: An Introduction</i> by Terry Eagleton,</li>
+          <li><i class="booktitle">Critical Theory Today: A User-Friendly Guide</i> by Lois Tyson (third edition, Routlege, 2009),</li>
+          <li><i class="booktitle">Literary Theory: A Practical Introduction</i> edited by Michael Ryan (third edition, Wiley, 2017),</li>
+          <!--https://www.wiley.com/en-us/Literary+Theory%3A+A+Practical+Introduction%2C+3rd+Edition-p-9781119061755-->
+          <li><i class="booktitle">Literary Theory: A Very Short Introduction</i> by Jonathan Culler (Oxford University Press),</li>
+          <li><i class="booktitle">Critical Encounters in High School English: Teaching Literary Theory</i> by Deborah Appleman,</li>
+          <li><i class="booktitle">Feminisms: An Anthology of Literary Theory and Criticism</i> edited by Robyn Warhol and Diane Price Herndl.</li>
+        </ol>
+      </li>
       <li>Morrissey, Sinéad:
         <a href="https://fivebooks.com/best-books/sinead-morrissey-on-poetry/">The best books on Poetry</a>,
         <i class="website">Five Books</i> (no date; April 2018?). The poet recommends the following books:
