Literariness: Literary Theory and Criticism Notes

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -479,6 +479,11 @@
           <li><i class="booktitle">Feminisms: An Anthology of Literary Theory and Criticism</i> edited by Robyn Warhol and Diane Price Herndl.</li>
         </ol>
       </li>
+      <li>
+        <a href="https://literariness.org/">Literariness: Literary Theory and Criticism Notes</a>:
+        <q>open access collection of notes inviting everyone to explore the unfathomable English Language, Literature, and Theory</q>
+        created and maintainted by Nasrullah Mambrol.
+      </li>
       <li>Morrissey, Sinéad:
         <a href="https://fivebooks.com/best-books/sinead-morrissey-on-poetry/">The best books on Poetry</a>,
         <i class="website">Five Books</i> (no date; April 2018?). The poet recommends the following books:
