Daiches: A Study of Literature for Readers and Critics

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -439,6 +439,11 @@
         Routledge, 2013. (944 pages)
         <a href="https://www.routledge.com/Global-Literary-Theory-An-Anthology/Lane/p/book/9780415783026"><abbr>ISBN</abbr> 9780415783026</a>.
       </li>
+      <li>Daiches, David:
+        <i class="booktitle">A Study of Literature for Readers and Critics</i>. Cornell University Press, 1948.
+        (Reprinted by W. W. Norton in 1964 and later by Greenwood Publishing.)
+        <!--Greenwood: ISBN-13: 9780837160269: https://www.unifachbuch.de/details/9780837160269/A-Study-of-Literature-for-Readers-and-Critics-David-Daiches/-->
+      </li>
       <li>Garber, Marjorie:
         <i class="booktitle">The Use and Abuse of Literature</i>.
         Anchor 2012. (336 pages)
