Fusaro: Karl Marx was Right (2015)

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -220,6 +220,11 @@
         <i class="magazine">Le Monde diplomatique</i></span>, May 2018.
         <!--@@PDF-->
       </li>
+      <li>Fusaro, Diego:
+        <a href="https://www.youtube.com/watch?v=kVNWKGkWpTQ">Karl Marx was Right. Ideology, alienation, capitalism</a>
+        (YouTube, 9 minutes, 06.03.2015):
+        interview with Diego Fusaro (in Italian with English subtitles).
+      </li>
     </ul>
   </main>
 
