--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -313,6 +313,10 @@
         <a href="https://www.singularityweblog.com/peter-singer/">Philosopher Peter Singer on <abbr>AI</abbr>, Transhumanism and Ethics</a>,
         <i class="website">Singularity Weblog</i>, 01.06.2018.
       </li>
+      <li>Conger, Kate:
+        <a href="https://gizmodo.com/google-plans-not-to-renew-its-contract-for-project-mave-1826488620">Google Plans Not to Renew Its Contract for Project Maven, a Controversial Pentagon Drone <abbr>AI</abbr> Imaging Program</a>,
+        <i class="website">Gizmodo</i>, 01.06.2018.
+      </li>
     </ul>
 
     <h2><abbr>AI</abbr> Safety</h2>
