Massa: AI needs to earn our trust, just like any human relationship

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -596,6 +596,10 @@
         <i class="website"><abbr>SWR</abbr> 2</i>, 30.05.2018.
         <!--@@download!!-->
       </li>
+      <li>Massa, Justin:
+        <a href="https://qz.com/1295291/ai-needs-to-earn-our-trust-just-like-any-human-relationship/"><abbr>AI</abbr> needs to earn our trust, just like any human relationship</a>,
+        <i class="website">Quartz</i>, 06.06.2018.
+      </li>
     </ul>
 
     <h3>Introductory Articles and Materials</h3>
