Wolters: Noam Chomsky Calls Jacques Lacan a Charlatan

--- a/science/index.html
+++ b/science/index.html
@@ -1058,6 +1058,10 @@
           </li>
         </ol>
       </li>
+      <li>Wolters, Eugene:
+        <a href="http://www.critical-theory.com/noam-chomsky-calls-jacques-lacan-a-charlatan/">Noam Chomsky Calls Jacques Lacan a ‘Charlatan’</a>,
+        <i class="blog">Critical Theory</i>, 28.02.2013.
+      </li>
     </ul>
 
     <h2>Unsorted Links</h2>
