Simonetta: The Gubbio Studio

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1540,6 +1540,10 @@
         <a href=""><abbr>ISBN</abbr> </a>.
       </li>
       -->
+      <li>Simonetta, Marcello:
+        <a href="https://www.youtube.com/watch?v=dy61cjGcEZU">The Gubbio Studiolo, Botticelli, and Lorenzo de' Medici: Patronage and Vendetta in Renaissance Italy</a>
+        (YouTube, 63 minutes, 02.12.2009): video of a presentation at the Met on 18 September 2009.
+      </li>
       <li>
         <a href="http://fivebooks.com/interview/ken-bartlett-renaissance-books/">Kenneth Bartlett recommends the best Renaissance Books</a>, 
         <i class="website">Five Books</i> (no date).
