--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1544,6 +1544,7 @@
         <a href="https://www.youtube.com/watch?v=dy61cjGcEZU">The Gubbio Studiolo, Botticelli, and Lorenzo de' Medici: Patronage and Vendetta in Renaissance Italy</a>
         (YouTube, 63 minutes, 02.12.2009): video of a presentation at the Met on 18 September 2009.
       </li>
+      <li><a href="http://www.medici.org/">The Medici Archive Project</a>.</li>
       <li>
         <a href="http://fivebooks.com/interview/ken-bartlett-renaissance-books/">Kenneth Bartlett recommends the best Renaissance Books</a>, 
         <i class="website">Five Books</i> (no date).
