Mike Darmiento's blog posts

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1560,6 +1560,15 @@
         <a href="https://en.wikipedia.org/wiki/Benvenuto_Cellini#Autobiography"><i class="booktitle">Autiobiography</i></a> (1558–1563).
       </li>
       <!-- https://www.youtube.com/watch?v=u2FANdhTDyI 10. New Modes and Orders: Machiavelli's The Prince (chaps. 1-12)  - YaleCourses -->
+      <li>Darmiento, Mike:
+        <a href="http://www.investingintheclassics.com/archives/529">Machiavelli’s The Prince: On History and Fame</a> (18.10.2015),
+        <a href="http://www.investingintheclassics.com/archives/537">Machiavelli’s Discourses on Livy: On Republics</a> (25.10.2015),
+        <a href="http://www.investingintheclassics.com/archives/542">Machiavelli’s Discourses on Livy: On Reordering</a> (01.11.2015),
+        <a href="http://www.investingintheclassics.com/archives/546">Machiavelli’s Discourses on Livy: On Adversaries</a> (08.11.2015),
+        <a href="http://www.investingintheclassics.com/archives/560">Machiavelli’s Discourses on Livy: On Acquisitions</a> (15.11.2015),
+        <a href="http://www.investingintheclassics.com/archives/588">Machiavelli’s Discourses on Livy: On Conspiracies</a> (22.11.2015).
+        (Darmiento is (or was) an undergraduate student at the University of Chicago studying Philosophy.)
+      </li>
       <li><i class="booktitle">The Prince</i> (1513) was written three years before 
         <a href="https://en.wikipedia.org/wiki/The_Education_of_a_Christian_Prince"><i class="booktitle">The Education of a Christian Prince</i></a>
         by Erasmus and Thomas More's
