--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1577,6 +1577,11 @@
         <a href="https://en.wikipedia.org/wiki/Mirrors_for_princes">mirrors for princes</a>
         (German <a href="https://de.wikipedia.org/wiki/F%C3%BCrstenspiegel" hreflang="de" lang="de">Fürstenspiegel</a>.
       </li>
+      <li>Erasmus:
+        <i class="booktitle">The Education of a Christian Prince with the Panegyric for Archduke Philip of Austria</i>. Edited by Lisa Jardine. Cambridge Texts in the History of Political Thought.
+        Cambridge University Press, 1997. (181 pages)
+        <a href="http://www.cambridge.org/de/academic/subjects/politics-international-relations/texts-political-thought/erasmus-education-christian-prince-panegyric-archduke-philip-austria?format=PB&isbn=9780521588119"><abbr>ISBN</abbr> 9780521588119</a>.
+      </li>
       <li lang="de">Roeck, Bernd:
         <i class="booktitle">Der Morgen der Welt. Geschichte der Renaissance</i>. C. H. Beck, 2017.
         <a href="https://www.chbeck.de/roeck-morgen-welt/product/16572675"><abbr>ISBN</abbr> 978-3-406-69876-7</a>.
