Guicciardini: Dialogue on the Government of Florence

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1582,6 +1582,11 @@
         Cambridge University Press, 1997. (181 pages)
         <a href="http://www.cambridge.org/de/academic/subjects/politics-international-relations/texts-political-thought/erasmus-education-christian-prince-panegyric-archduke-philip-austria?format=PB&isbn=9780521588119"><abbr>ISBN</abbr> 9780521588119</a>.
       </li>
+      <li>Guicciardini, Francesco:
+        <i class="booktitle">Dialogue on the Government of Florence</i>. Edited by Alison Brown. Cambridge Texts in the History of Political Thought.
+        Cambridge University Press, 1994. (256 pages)
+        <a href="http://www.cambridge.org/de/academic/subjects/politics-international-relations/texts-political-thought/guicciardini-dialogue-government-florence?format=PB"><abbr>ISBN</abbr> 9780521456234</a>.
+      </li>
       <li lang="de">Roeck, Bernd:
         <i class="booktitle">Der Morgen der Welt. Geschichte der Renaissance</i>. C. H. Beck, 2017.
         <a href="https://www.chbeck.de/roeck-morgen-welt/product/16572675"><abbr>ISBN</abbr> 978-3-406-69876-7</a>.
