--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2042,6 +2042,10 @@
         (YouTube).
         <!-- Also on TruthOut: http://www.truth-out.org/news/item/43911-the-battle-for-paradise-naomi-klein-on-disaster-capitalism-and-the-fight-for-puerto-rico-s-future?tmpl=component&print=1 -->
       </li>
+      <li>González, Juan; Goodman, Amy:
+        <a href="https://truthout.org/video/after-maria-puerto-ricans-cultivate-food-sovereignty-while-fema-delivered-skittles-and-cheez-its/">After Maria, Puerto Ricans Cultivate Food Sovereignty While <abbr>FEMA</abbr> Delivered Skittles and Cheez-Its</a>,
+        <i class="website">Truthout</i>, 21.03.2018.
+      </li>
       <li><abbr>TYT</abbr> Politics:
         <a href="https://www.youtube.com/watch?v=2gulZH9_VQM">Republicans Kill Rule Allowing Consumers To Sue Banks</a>
         (YouTube, 10 minutes, 25.10.2017).
