Democracy Now: Puerto Rico: Playground for the Privileged

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2046,6 +2046,10 @@
         <a href="https://truthout.org/video/after-maria-puerto-ricans-cultivate-food-sovereignty-while-fema-delivered-skittles-and-cheez-its/">After Maria, Puerto Ricans Cultivate Food Sovereignty While <abbr>FEMA</abbr> Delivered Skittles and Cheez-Its</a>,
         <i class="website">Truthout</i>, 21.03.2018.
       </li>
+      <li>Democracy Now:
+        <a href="https://www.youtube.com/watch?v=OXoT3PAV7nw">Puerto Rico, “Playground for the Privileged”: Investors Move In as Homes Foreclose &amp; Schools Close</a>
+        (YouTube, 17 minutes, 06.06.2018).
+      </li>
       <li><abbr>TYT</abbr> Politics:
         <a href="https://www.youtube.com/watch?v=2gulZH9_VQM">Republicans Kill Rule Allowing Consumers To Sue Banks</a>
         (YouTube, 10 minutes, 25.10.2017).
