--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2046,6 +2046,10 @@
         <a href="https://truthout.org/video/after-maria-puerto-ricans-cultivate-food-sovereignty-while-fema-delivered-skittles-and-cheez-its/">After Maria, Puerto Ricans Cultivate Food Sovereignty While <abbr>FEMA</abbr> Delivered Skittles and Cheez-Its</a>,
         <i class="website">Truthout</i>, 21.03.2018.
       </li>
+      <li>
+        <a href="https://theintercept.com/puerto-rico/">Livestream: The Battle for Paradise — Resisting Disaster Capitalism in Puerto Rico</a>,
+        <i class="website">The Intercept</i>, 06.06.2018.
+      </li>
       <li>Democracy Now:
         <a href="https://www.youtube.com/watch?v=OXoT3PAV7nw">Puerto Rico, “Playground for the Privileged”: Investors Move In as Homes Foreclose &amp; Schools Close</a>
         (YouTube, 17 minutes, 06.06.2018).
