Klein: The Battle for Paradise: Puerto Rico Takes on the Disaster Capitalists (book)

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2046,13 +2046,23 @@
         <a href="https://truthout.org/video/after-maria-puerto-ricans-cultivate-food-sovereignty-while-fema-delivered-skittles-and-cheez-its/">After Maria, Puerto Ricans Cultivate Food Sovereignty While <abbr>FEMA</abbr> Delivered Skittles and Cheez-Its</a>,
         <i class="website">Truthout</i>, 21.03.2018.
       </li>
+      <li>Democracy Now:
+        <a href="https://www.youtube.com/watch?v=OXoT3PAV7nw">Puerto Rico, “Playground for the Privileged”: Investors Move In as Homes Foreclose &amp; Schools Close</a>
+        (YouTube, 17 minutes, 06.06.2018).
+      </li>
       <li>
         <a href="https://theintercept.com/puerto-rico/">Livestream: The Battle for Paradise — Resisting Disaster Capitalism in Puerto Rico</a>,
         <i class="website">The Intercept</i>, 06.06.2018.
       </li>
       <li>Democracy Now:
-        <a href="https://www.youtube.com/watch?v=OXoT3PAV7nw">Puerto Rico, “Playground for the Privileged”: Investors Move In as Homes Foreclose &amp; Schools Close</a>
-        (YouTube, 17 minutes, 06.06.2018).
+        <a href="https://www.youtube.com/watch?v=1fbVXvpe9wQ">“The Battle for Paradise”: New Intercept Doc Goes Inside Struggle over Puerto Rico’s Future</a>
+        (YouTube, 9 minutes, 06.06.2018).
+      </li>
+      <li>Klein, Naomi:
+        <i class="booktitle">The Battle For Paradise: Puerto Rico Takes on the Disaster Capitalists</i>. HaymarketBooks, June 2018.
+        <a href="https://www.haymarketbooks.org/books/1235-the-battle-for-paradise"><abbr>ISBN</abbr> 9781608463572</a>.
+        This book is a fund raiser for <span lang="es">Junta Gente</span>, a coalition of organizations
+        that try to organise disaster recovery after hurrican Maria in September 2017.
       </li>
       <li><abbr>TYT</abbr> Politics:
         <a href="https://www.youtube.com/watch?v=2gulZH9_VQM">Republicans Kill Rule Allowing Consumers To Sue Banks</a>
