Hannan: How can Labour's leaders be in thrall to Marx?

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -220,6 +220,10 @@
         <i class="magazine">Le Monde diplomatique</i></span>, May 2018.
         <!--@@PDF-->
       </li>
+      <li>Hannan, Daniel:
+        <a href="https://capx.co/how-can-labours-leaders-be-in-thrall-to-marx/">How can Labour’s leaders be in thrall to Marx?</a>,
+        <i class="website">CapX</i>, 01.06.2018.
+      </li>
       <li>Fusaro, Diego:
         <a href="https://www.youtube.com/watch?v=kVNWKGkWpTQ">Karl Marx was Right. Ideology, alienation, capitalism</a>
         (YouTube, 9 minutes, 06.03.2015):
