Hegel-System.de

--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -218,6 +218,10 @@
         <a href="https://www.marxists.org/reference/archive/hegel/">Hegel by HyperText</a>,
         <i class="website">Marxists Internet Archive</i>.
       </li>
+      <li>
+        <a href="http://www.hegel-system.de/de/d0.htm" hreflang="de" lang="de">System der Wissenschaft</a>:
+        website maintained by Martin Grimsmann.
+      </li>
       <li lang="de">Stadtbibliothek Stuttgart:
         <a href="http://www1.stuttgart.de/stadtbibliothek/bvs/ausgabe.php?sid=205">Georg Wilhelm Friedrich Hegel</a>.
       </li>
