--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -216,6 +216,11 @@
         at the Centre of Ethical Philosophy, Durham University (<abbr>UK</abbr>).
         <!--Possibly not updated since 2010.-->
       </li>
+      <li>Owen, Andy:
+        <a href="https://aeon.co/essays/how-philosophy-helped-one-soldier-on-the-battlefield">Ethics on the battlefield</a>,
+        <i class="website">Aeon</i>, 13.06.2018.
+        <br />Andy Owen is the author of <i class="booktitle">All Soldier's Run Away: Alano's War, the Story of a British Deserter</i> (2017).
+      </li>
     </ul>
   </main>                           
 
