--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -174,7 +174,7 @@
       </li>
     </ul>
 
-    <h2>Why People Believed Weird Things</h2>
+    <h2>Why People Believe Weird Things</h2>
     <ul>
       <li>Barber, Nigel:
         <a href="https://www.psychologytoday.com/blog/the-human-beast/201005/why-atheism-will-replace-religion">Why Atheism Will Replace Religion</a>,
@@ -335,6 +335,11 @@
       <li>Collins, Lorence G.:
         <a href="https://www.csicop.org/si/show/twenty-one_reasons_noahs_worldwide_flood_never_happened">Twenty-One Reasons Noah’s Worldwide Flood Never Happened</a>,
         <i class="magazine">Skeptical Inquirer</i>, 42.2 (March/April 2018).
+      </li>
+      <!--@@new section-->
+      <li>
+        <a href="https://www.rte.ie/news/ireland/2018/0612/970070-blasphemy/">Blasphemy referendum set to take place in October</a>,
+        <i class="booktitle"><abbr title="Raidió Teilifís Éireann">RTÉ</abbr>.ie</i>, 12.06.2018.
       </li>
     </ul>
 
