--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1488,7 +1488,9 @@
       <li>Talisse, Robert:
         <a href="https://fivebooks.com/interview/robert-talisse-on-pragmatism/">The best books on Pragmatism</a>,
         <i class="website">Five Books</i> (October 2017?).
-        The five recommendations are the following:
+        Robert Talisse is the author of <i class="booktitle">Engaging Political Philosohy: An Introduction</i>
+        (Routledge, 2015, <a href="https://www.routledge.com/Engaging-Political-Philosophy-An-Introduction/Talisse/p/book/9780415808330"><abbr>ISBN</abbr>  9780415808330</a>).
+        His five recommendations are the following:
         <i class="booktitle">Philosophical Writings of Peirce</i> by C. S. Peirce,
         <i class="booktitle">Pragmatism</i> by William James,
         <i class="booktitle">Reconstruction in Philosophy</i> by John Dewey,
