Rationality Rules: Western Civilization is Based on Judeo-Christian Values - Debunked

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -336,6 +336,10 @@
         <a href="https://www.csicop.org/si/show/twenty-one_reasons_noahs_worldwide_flood_never_happened">Twenty-One Reasons Noah’s Worldwide Flood Never Happened</a>,
         <i class="magazine">Skeptical Inquirer</i>, 42.2 (March/April 2018).
       </li>
+      <li>Rationality Rules:
+        <a href="https://www.youtube.com/watch?v=Wd6FgYbMffk">Western Civilization is Based on Judeo-Christian Values – Debunked</a>
+        (YouTube, 11 minutes, 13.06.2018).
+      </li>
       <!--@@new section-->
       <li>
         <a href="https://www.rte.ie/news/ireland/2018/0612/970070-blasphemy/">Blasphemy referendum set to take place in October</a>,
