Quote Ursula Le Guin: The Dispossessed

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
   <main>
     <blockquote id="introquote">
       <p>
+        <q>It is of the nature of idea to be communicated: written, spoken, done. The idea is like grass.
+        It craves light, likes crowds, thrives on crossbreeding, grows better for being stepped on.</q>
+        <cite>Ursula K. Le Guin, <i class="booktitle">The Dispossessed</i> (1974), chapter three.</cite>
+      </p>
+    </blockquote>
+    <!--
+    <blockquote id="introquote">
+      <p>
         <q cite="http://www.bartleby.com/200/sw2.html">The vast accumulations of knowledge—or at least of information—deposited by the nineteenth century 
         have been responsible for an equally vast ignorance. When there is so much to be known, when there are so many fields of knowledge in which the same words are used with different meanings, 
         when every one knows a little about a great many things, it becomes increasingly difficult for anyone 
@@ -62,7 +70,6 @@
         <cite>T. S. Eliot, &ldquo;The Perfect Critic&rdquo;, in <i class="booktitle">The Sacred Wood</i> (1921).</cite>
       </p>
     </blockquote>
-    <!-- 
     <blockquote id="introquote">
       <p>
         <q cite="https://en.wikiquote.org/wiki/Philosophy#N">Science rushes headlong, without selectivity, without “taste,” at whatever is knowable, in the blind desire to know all at any cost. Philosophical thinking, on the other hand, is ever on the scent of those things which are most worth knowing, the great and the important insights.</q>
