Logically Fallacious: Proving Non-Existence

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -323,6 +323,10 @@
         <a href="https://www.youtube.com/watch?v=R3OkCxhjDmQ">You Can't Prove That God Doesn't Exist - Debunked</a>
         (YouTube, 10 minutes, 22.08.2017).
       </li>
+      <li>
+        <a href="https://www.logicallyfallacious.com/tools/lp/Bo/LogicalFallacies/145/Proving-Non-Existence">Proving Non-Existence</a>,
+        <i class="website">Logically Fallacious</i> (no date).
+      </li>
     </ul>
 
     <h2>How We Think (Dewey)</h2>
