DeMichele: You Can't Prove a Negative

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -327,6 +327,10 @@
         <a href="https://www.logicallyfallacious.com/tools/lp/Bo/LogicalFallacies/145/Proving-Non-Existence">Proving Non-Existence</a>,
         <i class="website">Logically Fallacious</i> (no date).
       </li>
+      <li>DeMichele, Thomas:
+        <a href="http://factmyth.com/factoids/you-cant-prove-a-negative/">You Can’t Prove a Negative</a>,
+        <i class="website">Fact or Myth?</i>, 26.07.2017, updated on 31.05.2018.
+      </li>
     </ul>
 
     <h2>How We Think (Dewey)</h2>
