Carrier: Proving a Negative

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -331,6 +331,10 @@
         <a href="http://factmyth.com/factoids/you-cant-prove-a-negative/">You Can’t Prove a Negative</a>,
         <i class="website">Fact or Myth?</i>, 26.07.2017, updated on 31.05.2018.
       </li>
+      <li>Carrier, Richard:
+        <a href="https://infidels.org/library/modern/richard_carrier/theory.html">Proving a Negative</a>
+        <i class="website">The Secular Web</i>, 1999.
+      </li>
     </ul>
 
     <h2>How We Think (Dewey)</h2>
