Moleski: Proving Negatives

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -335,6 +335,12 @@
         <a href="https://infidels.org/library/modern/richard_carrier/theory.html">Proving a Negative</a>
         <i class="website">The Secular Web</i>, 1999.
       </li>
+      <li>Moleski, Martin X.:
+        <a href="http://www3.canisius.edu/~moleski/proof/provenegs.htm">Proving Negatives</a>,
+        <i class="website">Martin X. Moleski's website (Canisius College)</i>, 26.08.2003, udpated on 20.01.2018.
+        A partly revised version is also available on
+        <a href="http://moleski.net/cac/Proving_negatives">Moleski's wiki</a>.
+      </li>
     </ul>
 
     <h2>How We Think (Dewey)</h2>
