StackExchange: Does a negative claimant have a burden of proof?

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -341,6 +341,11 @@
         A partly revised version is also available on
         <a href="http://moleski.net/cac/Proving_negatives">Moleski's wiki</a>.
       </li>
+      <li>
+        <a href="https://philosophy.stackexchange.com/q/678/23586">Does a negative claimant have a burden of proof?</a>
+        (question on Philosophy Stack Exchange).
+      </li>
+      <!--@@Hales, Steven D.: "You Can Prove a Negative", Think, Summer 2005: https://departments.bloomu.edu/philosophy/pages/content/hales/articles/proveanegative.html-->
     </ul>
 
     <h2>How We Think (Dewey)</h2>
