Denham: Norhtrop Frye & Critical Method

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -500,6 +500,10 @@
           <li><i class="booktitle">The Complete Poems 1927 – 1979</i> by Elizabeth Bishop.</li>
         </ul>
       </li>
+      <li>Denham, Robert D.l
+        <a href="https://macblog.mcmaster.ca/fryeblog/critical-method/preface.html">Northrop Frye &amp; Critical Method</a>:
+        online version of a dissertation written in 1972.
+      </li>
     </ul>
 
     <p>Introductions to literary criticism:</p>
