--- a/humanities/index.html
+++ b/humanities/index.html
@@ -396,6 +396,10 @@
         -->
       </li>
       <li>
+        <a href="https://mcl.as.uky.edu/glossary-rhetorical-terms">Glossary of Rhetorical Terms</a>,
+        <i class="website">College of Arts &amp; Sciences, University of Kentucky</i>.
+      </li>
+      <li>
         <a href="http://www.kristisiegel.com/">Dr. Kristi Siegel's website</a>:
         Kristi Siegel is professor of English at Mount Mary University (Milwaukee, Wisconsin).
         Her website contains online syllabi and resources for students and teachers,
