A Mind for Madness: 'validity in interpretation'

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -400,6 +400,10 @@
         <i class="website">College of Arts &amp; Sciences, University of Kentucky</i>.
       </li>
       <li>
+        <a href="https://hilbertthm90.wordpress.com/tag/validity-in-interpretation/">blog posts tagged &ldquo;validity in interpretation&rdquo;</a>
+        on the blog <i class="blog">A Mind for Madness</i>.<!--by Matt Ward?-->
+      </li>
+      <li>
         <a href="http://www.kristisiegel.com/">Dr. Kristi Siegel's website</a>:
         Kristi Siegel is professor of English at Mount Mary University (Milwaukee, Wisconsin).
         Her website contains online syllabi and resources for students and teachers,
